# bzip

./: Makefile  Makefile.autoconf  Makefile.rules  Makefile.vars.in  acconfig.h  aclocal.m4  confdeps.h  config.h.in  configure  configure.in
config.aux/: chvers  mkdep-sh  shvers
doc/: Makefile  Makefile.old  NOTES  README  bunzip.1  bzip.1
old/: bzip.c  bzip.c.sav.1  bzip.c.sav.2  cmdline.h  crc.h
src/: Makefile  bitstream.h  bzip.h  cmdline.h  compress.c  compress.h  crc.c  crc.h  decompress.c  deps  lc_common.h  main.c  main.h  models.c  models.h  tags  version  version.c  version.h  version.h.in
src/test/: gtr-evalue.awk  gtr.c  testbz  testbz2  tex.9gz  torture
